--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://emacstalk.codeberg.page/" />
+    <meta http-equiv="refresh" content="0; url=https://emacs.liujiacai.net/" />
   </head>
   <body>
-    <p>EmacsTalk 已经迁移到 Codeberg，<a href="https://emacstalk.codeberg.page/">立刻重定向</a></p>
+    <p><a href="https://emacs.liujiacai.net/">立刻重定向</a></p>
   </body>
 </html>
